updated swagger js
