# controllers/farminputs.js
@@ -52,8 +52,7 @@ router.post('/farm-inputs/add',verifyToken , async (req, res) => {
     price: req.body.price,
     supplier: req.body.supplier,
     quantity: req.body.quantity,
-    location: req.body.location,
-    createdBy: req.body.createdBy,
+    location: req.body.location
   });
 
   try {
