# models/farminputs.js
@@ -28,11 +28,7 @@ const FarmInputSchema = new Schema({
       type: String,
       
   },
-  createdBy: {
-    type: mongoose.Schema.Types.ObjectId,
-    ref: 'User',
-    required: true
-},
+
   createdAt: {
     type: Date,
     default: Date.now
